        directory tree.  It supports used of compressed files when etags is
        used.
      - [[https://github.com/pierre-rouleau/pel/blob/master/bin/etags-py][etags-py]] creates a etags-compliant TAGS file for Python source code
        file projects.  It does not process compressed files.
- Update: *Customization*:
  - New: command *pel-browse-group* which prompts allowing the browsing of the
    customization group tree from any group.  This complements the Emacs
    customize-browse which unfortunately does not prompt.
  - New: added several links to package home pages, user manuals and relevant
    Emacs manuals and sections.
  - New: The ``<f11> - <f3>`` key sequence provides access to the
    customization of the following groups: cua-mode, killing, popup-kill-ring.
  - Modification: new customization group *pel-pkg-for-cut-and-paste* which
    holds pel-use-popup-kill-ring that was previously under the undo group.
- Update: *Cut & Paste*:
  - New: added command *pel-delete-to-eol* to delete text from point to end
    of line without copying it to the kill ring.  It is bound to ``C-K`` (in
    graphics mode only) and to ``<f11> - E`` key sequence.
- Update: *Grep*:
  - New: Added key bindings for [[https://github.com/ggreer/the_silver_searcher][ag]] (the silver searcher) based grep-style
    search.
- Update: *Help*:
  - New: Added a command (<f11> ? e c) to open a local copy of
    one of the [[https://www.gnu.org/software/emacs/refcards/index.html][Emacs PDF reference cards]]. The new *pel-emacs-refcard-dirpath*
    user option identifies a directory where Emacs PDF refcards are stored. If
    you set that user option PEL uses it to locate the Emacs PDF refcards,
    otherwise it attempts to locate it.  Under macOS automatic location often
    works nicely because the Emacs reference cards are stored in PDF format.
    On Linux platforms the refcards are stored in .tex format and PEL does not